fix fox animation on safari and animations

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
     --offsetY: calc((var(--mouseY) - 50vh) * -1);
     animation: fadeIn 1s ease-in-out forwards;
     color: var(--color);
+    overflow-x: hidden;
 }
 
 header {
@@ -209,6 +210,7 @@ header {
 }
 .about {
     height: 100vh;
+    width: 100vw;
     padding: 2rem;
     background: url(/img/dungeon.webp) no-repeat center center/cover;
     text-align: center;
@@ -227,11 +229,6 @@ header {
     width: 100vw;
     padding: 2rem;
     background: url(/img/treasure.webp) no-repeat center center/cover;
-    background-image: linear-gradient(
-            transparent,
-            rgba(0, 0, 0, var(--opacity))
-        ),
-        url(/img/treasure.webp);
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -243,6 +240,16 @@ header {
     --opacity: 1;
 }
 
+.awards::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: linear-gradient(transparent, rgba(0, 0, 0, var(--opacity)));
+}
 .awards_container {
     display: flex;
     justify-content: center;
